Moved to custom wrapper and fixed based literals.
Rearranged file structure for ease in future and to prepare for parser.
Changed from Alex wrapper to custom to better understand workings and
allow future improvements.
Changed error type from string to algabraic data type.
Added function to process based literals.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -26,8 +26,10 @@ cabal-version:       >=1.10
 executable VHDL-Sim-exe
   hs-source-dirs:      src
   main-is:             Main.hs
-  other-modules:       Tokens
-                     , TokenTypes
+  other-modules:       Parser.Tokens
+                     , Parser.TokenTypes
+                     , Parser.Alex.Types
+                     , Parser.Alex.Functions
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      --, VHDL-Sim
