Renamed lexer file.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -26,7 +26,7 @@ cabal-version:       >=1.10
 executable VHDL-Sim-exe
   hs-source-dirs:      src
   main-is:             Main.hs
-  other-modules:       Parser.Tokens
+  other-modules:       Parser.Lexer
                      , Parser.TokenTypes
                      , Parser.Alex.Types
                      , Parser.Alex.Functions
