--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -13,29 +13,28 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
---library
---  hs-source-dirs:      src
---  exposed-modules:     Tokens
---  build-depends:       base >= 4.7 && < 5
---                     , array
---                     , split
---                     , alex
---  build-tools:         alex
---  default-language:    Haskell2010
-
-executable VHDL-Sim-exe
+library
   hs-source-dirs:      src
-  main-is:             Main.hs
-  other-modules:       Parser.Lexer
+  exposed-modules:     Parser.Lexer
                      , Parser.TokenTypes
                      , Parser.Alex.Types
                      , Parser.Alex.Functions
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     --, VHDL-Sim
+  build-depends:       base >= 4.7 && < 5
                      , array
                      , split
   build-tools:         alex
+  default-language:    Haskell2010
+
+executable VHDL-Sim-exe
+  hs-source-dirs:      app
+  main-is:             Main.hs
+--  other-modules:       
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , VHDL-Sim
+                     , array
+                     , split
+--  build-tools:         alex
   default-language:    Haskell2010
 
 --test-suite VHDL-Sim-test
