--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -37,14 +37,17 @@ executable VHDL-Sim-exe
 --  build-tools:         alex
   default-language:    Haskell2010
 
---test-suite VHDL-Sim-test
---  type:                exitcode-stdio-1.0
---  hs-source-dirs:      test
---  main-is:             Spec.hs
---  build-depends:       base
---                     , VHDL-Sim
---  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
---  default-language:    Haskell2010
+test-suite VHDL-Sim-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  other-modules:       LexerSpec
+  build-depends:       base
+                     , VHDL-Sim
+                     , tasty
+                     , tasty-hunit
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
 
 source-repository head
   type:     git
