--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -46,6 +46,7 @@ test-suite VHDL-Sim-test
                      , VHDL-Sim
                      , tasty
                      , tasty-hunit
+                     , tasty-quickcheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
