--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -47,6 +47,7 @@ test-suite VHDL-Sim-test
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
+                     , containers
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
