--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -48,6 +48,7 @@ test-suite VHDL-Sim-test
                      , tasty-hunit
                      , tasty-quickcheck
                      , containers
+                     , split
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
