--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -22,6 +22,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
+                     , bytestring
   build-tools:         alex
   default-language:    Haskell2010
 
@@ -49,6 +50,7 @@ test-suite VHDL-Sim-test
                      , tasty-quickcheck
                      , containers
                      , split
+                     , bytestring
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
