--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -19,11 +19,15 @@ library
                      , Parser.TokenTypes
                      , Parser.Alex.Types
                      , Parser.Alex.Functions
+                     , Parser.Parser
+                     , Parser.Happy.Types
+                     , Parser.Happy.Functions
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
                      , bytestring
   build-tools:         alex
+                     , happy
   default-language:    Haskell2010
 
 executable VHDL-Sim-exe
