Rearranged file structure.
Rearranged file structure:
- Moved parser error type into separate file
- Modified imports as applicable
- Moved some lexing functions into separate file
- Moved token definition into TokenTypes file
- Moved alex base types into separate file
- Moved alex monad into separate file

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -17,8 +17,12 @@ library
   hs-source-dirs:      src
   exposed-modules:     Parser.Lexer
                      , Parser.TokenTypes
-                     , Parser.Alex.Types
+                     , Parser.ErrorTypes
+                     , Parser.PositionWrapper
+                     , Parser.Alex.BaseTypes
+                     , Parser.Alex.Monad
                      , Parser.Alex.Functions
+                     , Parser.Alex.LexFunctions
                      , Parser.Parser
                      , Parser.Happy.Types
                      , Parser.Happy.Functions
