Added position information to lexer and parser.
Created new position wrapper type to add position information to any
other type, e.g. Tokens.
Changed error type to have position wrapped rather than in each
constructor, for consistency.
Update to lexing functions:
- Simplified the type signatures
- Refactored functions
Changed parsing calls:
- Created functions to create position wrapped parse tree elements
- Moved functions into separate file
Changed parsing types:
- Added comments for haddock to the types
- Added position wrappers to relevant types

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -26,6 +26,7 @@ library
                      , Parser.Parser
                      , Parser.Happy.Types
                      , Parser.Happy.Functions
+                     , Parser.Happy.ParseFunctions
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
