--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -31,6 +31,7 @@ library
                      , array
                      , split
                      , bytestring
+                     , containers
   build-tools:         alex
                      , happy
   default-language:    Haskell2010
