First compiling version of netlister modules.
Added first netlister modules to cabal file to compile (not yet
included).
Changed netlister modules to work in compilation.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -27,6 +27,8 @@ library
                      , Parser.Happy.Types
                      , Parser.Happy.Functions
                      , Parser.Happy.ParseFunctions
+                     , Netlister.TypeData
+                     , Netlister.Builtin.Standard
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
