Created scope types and initial scope object.
Added autocompletion action to arguments.
Changed library name to string to allow future custom libraries.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -30,6 +30,7 @@ library
                      , Netlister.TypeData
                      , Netlister.Builtin.Standard
                      , Netlister.Builtin.Netlist
+                     , Netlister.Types.Scope
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
