Extracted operator types into separate file.
Updated scopes type in preparation for scope extraction/conversion.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -31,6 +31,7 @@ library
                      , Netlister.Builtin.Standard
                      , Netlister.Builtin.Netlist
                      , Netlister.Types.Scope
+                     , Netlister.Types.Operators
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
