--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -35,6 +35,7 @@ library
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
+                     , Netlister.Convert.Scope
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
