--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -38,6 +38,7 @@ library
                      , Manager.Args
                      , Manager.Filing
                      , Netlister.Convert.Scope
+                     , Netlister.ParseTree
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
@@ -46,6 +47,7 @@ library
                      , optparse-applicative
                      , transformers
                      , directory
+                     , mtl >= 2.2.2
   build-tools:         alex
                      , happy
   default-language:    Haskell2010
