Change to scope processing.
Added scope store for actual scope storage: stores all declarations in
the current scope (rather than scope names).
Need to deal with cylic dependencies (issue #27).
Currently may have issues with scope evaluation being loaded into map
(issue #28).

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -48,6 +48,7 @@ library
                      , transformers
                      , directory
                      , mtl >= 2.2.2
+                     , bimap
   build-tools:         alex
                      , happy
   default-language:    Haskell2010
