Addition of base library conversion code.
Started converter for library units and packages, currently just throws
errors for all package declarations and anything other than a package
library unit.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -39,6 +39,8 @@ library
                      , Manager.Filing
                      , Netlister.Convert.Scope
                      , Netlister.ParseTree
+                     , Netlister.Parse.Library
+                     , Netlister.Parse.Package
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
