--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -41,6 +41,7 @@ library
                      , Netlister.ParseTree
                      , Netlister.Parse.Library
                      , Netlister.Parse.Package
+                     , Netlister.Parse.Type
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
