Continued work on netlist conversion.
Added new file to provide common functions for store
querying/manipulation.
Separated VHDL "subtype" into its own declaration type, rather than
being a part of the VHDL "type" type.
Started considering representation of functions in greater detail.
Improved scope/store manipulation using the record syntax for greater
clarity (and shorter code) which should also provide better
extensibility.
Started simplifying interface to low level declaration conversion
functions by creating a unit store type.
Started objects (constants, variables, signals) representation.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -31,13 +31,15 @@ library
                      , Netlister.Builtin.Netlist
                      , Netlister.Types.Scope
                      , Netlister.Types.Operators
+                     , Netlister.Types.Objects
                      , Netlister.Types.Stores
                      , Netlister.Types.Representation
                      , Netlister.Types.Top
+                     , Netlister.Convert.Scope
+                     , Netlister.Convert.Stores
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
-                     , Netlister.Convert.Scope
                      , Netlister.ParseTree
                      , Netlister.Parse.Library
                      , Netlister.Parse.Package
