--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -44,6 +44,7 @@ library
                      , Netlister.Parse.Library
                      , Netlister.Parse.Package
                      , Netlister.Parse.Type
+                     , Netlister.Parse.Objects
   build-depends:       base >= 4.7 && < 5
                      , array
                      , split
