Better overlapping namespace detection.
Moved Netlister.Convert.Stores to Netlister.Functions.Stores since the
functions weren't really for conversions.
Added additional checks for namespace overlapping that checks the
insides of types including enum literals and physical unit names.
Integrated these better checks into the netlist conversions.
New error types for enum namespace failures.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -33,10 +33,10 @@ library
                      , Netlister.Types.Operators
                      , Netlister.Types.Objects
                      , Netlister.Types.Stores
+                     , Netlister.Functions.Stores
                      , Netlister.Types.Representation
                      , Netlister.Types.Top
                      , Netlister.Convert.Scope
-                     , Netlister.Convert.Stores
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
