Changed Alex monad to state transformer.
For future extensibility.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -32,6 +32,8 @@ library
                      , split
                      , bytestring
                      , containers
+                     , transformers
+                     , mtl
   build-tools:         alex
                      , happy
   default-language:    Haskell2010
