--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -84,6 +84,7 @@ test-suite VHDL-Sim-test
                      , containers
                      , split
                      , bytestring
+                     , mtl
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
