--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -85,6 +85,7 @@ test-suite VHDL-Sim-test
                      , split
                      , bytestring
                      , mtl
+                     , transformers
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
