--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -29,19 +29,19 @@ library
                      , Parser.Functions.IdentifyName
                      , Parser.Functions.Parse.DesignFile
                      , Parser.Functions.Parse.Context
+                     , Parser.Functions.Convert.Scope
                      , Parser.Netlist.Types.Representation
                      , Parser.Netlist.Types.Stores
                      , Parser.Netlist.Types.Scope
                      , Parser.Netlist.Types.Objects
                      , Parser.Netlist.Types.Operators
+                     , Parser.Netlist.Functions.Stores
                      , Parser.Netlist.Builtin.Netlist
                      , Parser.Netlist.Builtin.Standard
                      --, Parser.Happy.Types
                      --, Parser.Happy.Functions
                      --, Parser.Happy.ParseFunctions
-                     --, Netlister.Functions.Stores
                      --, Netlister.Types.Top
-                     --, Netlister.Convert.Scope
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
