New package parsing framework functions.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -32,6 +32,7 @@ library
                      , Parser.Functions.Parse.DesignFile
                      , Parser.Functions.Parse.Context
                      , Parser.Functions.Parse.Library
+                     , Parser.Functions.Parse.Package
                      , Parser.Functions.Convert.Scope
                      , Parser.Netlist.Types.Representation
                      , Parser.Netlist.Types.Stores
