Added subtype output and fixes.
Now allows compilation of outputted standard file.
Added subtype output processing (except from arrays), required changing
of type/subtype netlist storage implementation.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -52,6 +52,7 @@ library
                      , Sim.Packages
                      , Sim.Imports
                      , Sim.Types
+                     , Sim.Subtypes
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
