Added subtype declaration parsing and conversion.
Moved subtype indication related parsing functions into subtype parsing
module accordingly.
Also started creating types for entity parsing.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -36,6 +36,7 @@ library
                      , Parser.Functions.Parse.Library
                      , Parser.Functions.Parse.Package
                      , Parser.Functions.Parse.Type
+                     , Parser.Functions.Parse.Subtype
                      , Parser.Functions.Parse.Expression
                      , Parser.Functions.Parse.Objects
                      , Parser.Functions.Convert.Scope
