Added start entity output and output fixes.
Added Sim.Entities module to deal with entity output.
Added Sim.Constants for constant output, required Sim.Error to deal with
errors when the constant has no value.
Changed names of functions to include netlist name (library and
package/entity names) to avoid potential namespace clashes.
Copied across changes to prebuilt STD.STANDARD haskell module.
Added missing function exports to STD.STANDARD module.
Fix for constant parsing: didn't include last name in identifier list in
output.
Fix for package parsing: only continue if keyword isn't end.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -54,10 +54,13 @@ library
                      --, Parser.Happy.Functions
                      --, Parser.Happy.ParseFunctions
                      , Sim.Top
+                     , Sim.Entities
                      , Sim.Packages
                      , Sim.Imports
                      , Sim.Types
                      , Sim.Subtypes
+                     , Sim.Constants
+                     , Sim.Error
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
