Added entity parsing.
Updated entity printing.
Fixed bug parsing context clauses (more than one clause, and lack of
semicolon check).

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -35,6 +35,7 @@ library
                      , Parser.Functions.Parse.Context
                      , Parser.Functions.Parse.Library
                      , Parser.Functions.Parse.Package
+                     , Parser.Functions.Parse.Entity
                      , Parser.Functions.Parse.Type
                      , Parser.Functions.Parse.Subtype
                      , Parser.Functions.Parse.Expression
