--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -56,7 +56,10 @@ library
                      --, Parser.Happy.Types
                      --, Parser.Happy.Functions
                      --, Parser.Happy.ParseFunctions
+                     , Sim.Functions.ConvertNames
                      , Sim.Output.Top
+                     , Sim.Output.Control
+                     , Sim.Output.Components
                      , Sim.Output.Entities
                      , Sim.Output.Packages
                      , Sim.Output.Imports
@@ -65,6 +68,9 @@ library
                      , Sim.Output.Constants
                      , Sim.Output.Processes
                      , Sim.Types.Error
+                     , Sim.Builtin.STD.STANDARD
+                     , Sim.Builtin.ControlModule
+                     , Sim.Builtin.MainModule
                      , Manager.NewDesignUnit
                      , Manager.Args
                      , Manager.Filing
@@ -82,6 +88,7 @@ library
                      , mtl >= 2.2.2
                      , bimap
                      , filepath
+                     , text
   build-tools:         alex
                      , happy
   default-language:    Haskell2010
