Updates to Sim modules for signal assignment.
Added port name search, port reading in expressions, and port writing in
signal assignments.
Added more calculation sim outputs.
Removed bug where was throwing a non-implementation error even though
the feature was implemented.
Fix for bug in filename generation (now use actual filepath connection).

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -69,6 +69,7 @@ library
                      , Sim.Output.Constants
                      , Sim.Output.Processes
                      , Sim.Output.Cabal
+                     , Sim.Output.Names
                      , Sim.Types.Error
                      , Sim.Builtin.STD.STANDARD
                      , Sim.Builtin.ControlModule
