Added architecture output and bug fixes.
Added time to signal toggling information printed to stdout during
simulation.
Added boolean/bit logical operators to STD.STANDARD package
- Note: Did not add for bit_vector, need to implement arrays
Removed old comments from STD.STANDARD package.
Moved outputEntityControl function to generic outputComponentControl
function
- From Sim.Output.Entities module to Sim.Output.Components
Changed top module name to "TOP" instead of "TOP.MODULE".
Added check for architectures in top module sim output.
Moved showEnum function to lower level module to avoid cyclical import.
- Sim.Output.Types to Sim.Output.Names
Added convertCalculation matches for most other missing calculation
types.
Added show instances for most parser and netlister errors.
Added new sim error constructors instead of using Haskell error
function.

Fix for architecture store:
- Changed key to (library name,entity name,architecture name)
- Originally was just the library name and architecture name
- Also save declarations under entity (full) name
   - This is so renaming for components is easier
   - Can rename entity/architecture with same names
Fix for saving many different declarations:
- Was only saving if optional second identifier was provided
- Moved save to after name and/or semicolon parse
Fix for multiple libraries in a design file:
- Was missing EOF check and assuming single library to file
- Added EOF token check
Added missing (non-static) function search pattern matches.
Fix for absorbing semicolon at end of object (specifically signal)
parse.
Fix for incorrect time jumps in simulation
- Jumping to delay instead of adding delay and current time
- Forgetting to save the final state after updating signal values.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -62,6 +62,7 @@ library
                      , Sim.Output.Control
                      , Sim.Output.Components
                      , Sim.Output.Entities
+                     , Sim.Output.Architectures
                      , Sim.Output.Packages
                      , Sim.Output.Imports
                      , Sim.Output.Types
