Moved parser tests until rewrite.
Need to rewrite parser as separate entity, then can merge this back.

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -117,8 +117,8 @@ test-suite VHDL-Sim-test
   main-is:             Spec.hs
   other-modules:       LexerSpec
                      , Generators.LexElements
-                     , ParserSpec
-                     , Generators.ParseElements
+                     --, ParserSpec
+                     --, Generators.ParseElements
   build-depends:       base
                      , VHDL-Sim
                      , tasty
