Added new sentence tests.
Changed lexer:
- Requires whitespace or identifier after right parenthesis
- Used to require whitespace or operator
- Unsure if could allow all (issue #41)

--- a/VHDL-Sim.cabal
+++ b/VHDL-Sim.cabal
@@ -118,6 +118,7 @@ test-suite VHDL-Sim-test
   other-modules:       Lexer.Spec
                      , Lexer.Functions
                      , Lexer.SingleWords
+                     , Lexer.Sentences
                      , Generators.LexElements
                      --, ParserSpec
                      --, Generators.ParseElements
